--- a/flight_data_analysis.ipynb
+++ b/flight_data_analysis.ipynb
@@ -288,8 +288,8 @@
     "\n",
     "conf = SparkConf().setAppName('FlightDataAnalysis').setMaster('spark://172.26.176.1:7077')\n",
     "\n",
-    "conf.set('spark.executor.memory', '16G')\n",
-    "conf.set('spark.driver.memory', '16G')\n",
+    "conf.set('spark.executor.memory', '32G')\n",
+    "conf.set('spark.driver.memory', '32G')\n",
     "conf.set(\"spark.sql.shuffle.partitions\", '200')\n",
     "#conf.set('spark.dynamicAllocation.enabled', 'true')\n",
     "#conf.set('spark.dynamicAllocation.minExecutors', '2')\n",
@@ -314,79 +314,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d0d0a29d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cancelled_flight_df = find_all_the_flight_that_canceled(flightDF=flightDF)\n",
-    "data_writer_parquet(cancelled_flight_df, 'overwrite',\n",
-    "                            './transform_data/cancelled_flights')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "5be94d96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------+---------------------------------+\n",
+      "|AIRLINE_NAME                |TOTAL_NUMBER_OF_FLIGHTS_CANCELLED|\n",
+      "+----------------------------+---------------------------------+\n",
+      "|Hawaiian Airlines Inc.      |171                              |\n",
+      "|Virgin America              |534                              |\n",
+      "|Frontier Airlines Inc.      |588                              |\n",
+      "|Alaska Airlines Inc.        |669                              |\n",
+      "|Spirit Air Lines            |2004                             |\n",
+      "|Delta Air Lines Inc.        |3824                             |\n",
+      "|US Airways Inc.             |4067                             |\n",
+      "|JetBlue Airways             |4276                             |\n",
+      "|United Air Lines Inc.       |6573                             |\n",
+      "|Skywest Airlines Inc.       |9960                             |\n",
+      "|American Airlines Inc.      |10919                            |\n",
+      "|American Eagle Airlines Inc.|15025                            |\n",
+      "|Atlantic Southeast Airlines |15231                            |\n",
+      "|Southwest Airlines Co.      |16043                            |\n",
+      "+----------------------------+---------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "total_flight_cancelled_by_airline_name = find_airlines_total_number_of_flights_cancelled(flightDF=flightDF,\n",
     "                                                                                                 airlineDF=airlineDF)\n",
-    "data_writer_parquet(total_flight_cancelled_by_airline_name, 'overwrite',\n",
-    "                            './transform_data/airline_total_flights_cancelled')"
+    "total_flight_cancelled_by_airline_name.show(20, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "8a333a0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------------------------------+------------------------------+\n",
+      "|AIRPORT_NAME                                              |TOTAL_NUMBER_DEPARTURE_FLIGHTS|\n",
+      "+----------------------------------------------------------+------------------------------+\n",
+      "|Ithaca Tompkins Regional Airport                          |30                            |\n",
+      "|King Salmon Airport                                       |63                            |\n",
+      "|Gustavus Airport                                          |76                            |\n",
+      "|Dillingham Airport                                        |77                            |\n",
+      "|St. Cloud Regional Airport                                |78                            |\n",
+      "|Barnstable Municipal Airport                              |82                            |\n",
+      "|Adak Airport                                              |89                            |\n",
+      "|Wilmington Airport                                        |95                            |\n",
+      "|Pago Pago International Airport (Tafuna Airport)          |107                           |\n",
+      "|Mammoth Yosemite Airport                                  |140                           |\n",
+      "|Northeast Florida Regional Airport (St. Augustine Airport)|144                           |\n",
+      "|Del Norte County Airport (Jack McNamara Field)            |174                           |\n",
+      "|Valdez Airport                                            |200                           |\n",
+      "|Canyonlands Field                                         |205                           |\n",
+      "|Martha's Vineyard Airport                                 |205                           |\n",
+      "|Westerly State Airport                                    |208                           |\n",
+      "|Pueblo Memorial Airport                                   |253                           |\n",
+      "|Greater Binghamton Airport                                |259                           |\n",
+      "|Southwest Oregon Regional Airport (North Bend Municipal)  |265                           |\n",
+      "|Plattsburgh International Airport                         |279                           |\n",
+      "+----------------------------------------------------------+------------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "total_departure_flights_from_each_airport = find_total_number_of_departure_flight_from_airport_to(\n",
     "            flightDF=flightDF, airportDF=airportDF)\n",
-    "data_writer_parquet(total_departure_flights_from_each_airport, 'overwrite',\n",
-    "                            './transform_data/total_number_departure_flights')"
+    "total_departure_flights_from_each_airport.show(20, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "ba867f22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+------------------------------+\n",
+      "|AIRLINE_NAME          |TOTAL_NUMBER_CANCELLED_FLIGHTS|\n",
+      "+----------------------+------------------------------+\n",
+      "|Southwest Airlines Co.|16043                         |\n",
+      "+----------------------+------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "total_departure_flights_from_each_airport = find_max_flight_cancelled_airline(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
-    "data_writer_parquet(total_departure_flights_from_each_airport, 'overwrite',\n",
-    "                            './transform_data/most_cancelled_flights_airline')"
+    "total_departure_flights_from_each_airport.show(20, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "91e5206d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------+--------------+\n",
+      "|AIRLINE_NAME                |TOTAL_DISTANCE|\n",
+      "+----------------------------+--------------+\n",
+      "|American Airlines Inc.      |10296318      |\n",
+      "|Southwest Airlines Co.      |10146965      |\n",
+      "|United Air Lines Inc.       |8062931       |\n",
+      "|Atlantic Southeast Airlines |7113045       |\n",
+      "|American Eagle Airlines Inc.|6130194       |\n",
+      "|Skywest Airlines Inc.       |4232860       |\n",
+      "|JetBlue Airways             |3943059       |\n",
+      "|Delta Air Lines Inc.        |3045010       |\n",
+      "|US Airways Inc.             |2735834       |\n",
+      "|Spirit Air Lines            |1900041       |\n",
+      "|Virgin America              |759501        |\n",
+      "|Alaska Airlines Inc.        |578235        |\n",
+      "|Frontier Airlines Inc.      |555826        |\n",
+      "|Hawaiian Airlines Inc.      |88107         |\n",
+      "+----------------------------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "total_distance_flown = find_total_distance_flown_each_airline(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
-    "data_writer_parquet(total_distance_flown, 'overwrite',\n",
-    "                            './transform_data/total_distance_flown_each_airline')"
+    "total_distance_flown.show(20, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "6ff1557d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------+-----------+---------------------+------------------+\n",
+      "|AIRLINE_NAME                |TOTAL_DELAY|TOTAL_DELAYED_FLIGHTS|AVERAGE           |\n",
+      "+----------------------------+-----------+---------------------+------------------+\n",
+      "|Frontier Airlines Inc.      |1554161    |34893                |44.54076748918121 |\n",
+      "|Spirit Air Lines            |2183787    |52089                |41.924149052583076|\n",
+      "|Atlantic Southeast Airlines |6938681    |169897               |40.840515135641006|\n",
+      "|American Eagle Airlines Inc.|3764411    |93726                |40.16399931715853 |\n",
+      "|Skywest Airlines Inc.       |6726185    |171572               |39.20327908982818 |\n",
+      "|JetBlue Airways             |3839241    |102061               |37.6171211334398  |\n",
+      "|American Airlines Inc.      |8451818    |245904               |34.370396577526186|\n",
+      "|United Air Lines Inc.       |8364090    |256550               |32.60218281036835 |\n",
+      "|Virgin America              |708056     |23379                |30.285983147268915|\n",
+      "|Delta Air Lines Inc.        |8385604    |282463               |29.68744224907333 |\n",
+      "|US Airways Inc.             |1783141    |62565                |28.500615360025574|\n",
+      "|Southwest Airlines Co.      |15276796   |566807               |26.95237708779179 |\n",
+      "|Alaska Airlines Inc.        |1134719    |43566                |26.045976219988063|\n",
+      "|Hawaiian Airlines Inc.      |339340     |20146                |16.844038518812667|\n",
+      "+----------------------------+-----------+---------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "total_delayed_average = find_average_departure_delay_of_airliner(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
-    "data_writer_parquet(total_delayed_average, 'overwrite',\n",
-    "                            './transform_data/average_departure_delay_of_airliner')"
+    "total_delayed_average.show(20, truncate=False)"
    ]
   },
   {
@@ -400,9 +507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "conda-env-anaconda3-pyspark_env-py",
+   "display_name": "Python [conda env:pyspark_env] *",
    "language": "python",
-   "display_name": "Python [conda env:anaconda3-pyspark_env] *"
+   "name": "conda-env-pyspark_env-py"
   },
   "language_info": {
    "codemirror_mode": {
