--- a/flight_data_analysis.ipynb
+++ b/flight_data_analysis.ipynb
@@ -397,23 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ba867f22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------+------------------------------+\n",
-      "|AIRLINE_NAME          |TOTAL_NUMBER_CANCELLED_FLIGHTS|\n",
-      "+----------------------+------------------------------+\n",
-      "|Southwest Airlines Co.|16043                         |\n",
-      "+----------------------+------------------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_departure_flights_from_each_airport = find_max_flight_cancelled_airline(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
@@ -422,36 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "91e5206d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+--------------+\n",
-      "|AIRLINE_NAME                |TOTAL_DISTANCE|\n",
-      "+----------------------------+--------------+\n",
-      "|American Airlines Inc.      |10296318      |\n",
-      "|Southwest Airlines Co.      |10146965      |\n",
-      "|United Air Lines Inc.       |8062931       |\n",
-      "|Atlantic Southeast Airlines |7113045       |\n",
-      "|American Eagle Airlines Inc.|6130194       |\n",
-      "|Skywest Airlines Inc.       |4232860       |\n",
-      "|JetBlue Airways             |3943059       |\n",
-      "|Delta Air Lines Inc.        |3045010       |\n",
-      "|US Airways Inc.             |2735834       |\n",
-      "|Spirit Air Lines            |1900041       |\n",
-      "|Virgin America              |759501        |\n",
-      "|Alaska Airlines Inc.        |578235        |\n",
-      "|Frontier Airlines Inc.      |555826        |\n",
-      "|Hawaiian Airlines Inc.      |88107         |\n",
-      "+----------------------------+--------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_distance_flown = find_total_distance_flown_each_airline(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
@@ -460,36 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6ff1557d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+-----------+---------------------+------------------+\n",
-      "|AIRLINE_NAME                |TOTAL_DELAY|TOTAL_DELAYED_FLIGHTS|AVERAGE           |\n",
-      "+----------------------------+-----------+---------------------+------------------+\n",
-      "|Frontier Airlines Inc.      |1554161    |34893                |44.54076748918121 |\n",
-      "|Spirit Air Lines            |2183787    |52089                |41.924149052583076|\n",
-      "|Atlantic Southeast Airlines |6938681    |169897               |40.840515135641006|\n",
-      "|American Eagle Airlines Inc.|3764411    |93726                |40.16399931715853 |\n",
-      "|Skywest Airlines Inc.       |6726185    |171572               |39.20327908982818 |\n",
-      "|JetBlue Airways             |3839241    |102061               |37.6171211334398  |\n",
-      "|American Airlines Inc.      |8451818    |245904               |34.370396577526186|\n",
-      "|United Air Lines Inc.       |8364090    |256550               |32.60218281036835 |\n",
-      "|Virgin America              |708056     |23379                |30.285983147268915|\n",
-      "|Delta Air Lines Inc.        |8385604    |282463               |29.68744224907333 |\n",
-      "|US Airways Inc.             |1783141    |62565                |28.500615360025574|\n",
-      "|Southwest Airlines Co.      |15276796   |566807               |26.95237708779179 |\n",
-      "|Alaska Airlines Inc.        |1134719    |43566                |26.045976219988063|\n",
-      "|Hawaiian Airlines Inc.      |339340     |20146                |16.844038518812667|\n",
-      "+----------------------------+-----------+---------------------+------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_delayed_average = find_average_departure_delay_of_airliner(\n",
     "            flightDF=flightDF, airlineDF=airlineDF)\n",
@@ -502,7 +437,9 @@
    "id": "62cae996",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "find_cancelled_flight = flightsDf.select('*').where('CANCELLED = 1')"
+   ]
   }
  ],
  "metadata": {
