--- a/flight_data_analysis.ipynb
+++ b/flight_data_analysis.ipynb
@@ -498,32 +498,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "62cae996",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_26180/3066685719.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\rahin\\AppData\\Local\\Temp/ipykernel_26180/3066685719.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    cancelled_flights = flightDF.select('*').where('CANCELLED = 1').where('IATA_CODE = ' iata_code)\u001b[0m\n\u001b[1;37m                                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+---+-----------+-------+-------------+-----------+--------------+-------------------+-------------------+--------------+---------------+--------+----------+--------------+------------+--------+--------+---------+-------+-----------------+------------+-------------+--------+---------+-------------------+----------------+--------------+-------------+-------------------+-------------+---------+--------------------+---------+-----+-------+--------+----------+\n",
+      "|YEAR|MONTH|DAY|DAY_OF_WEEK|AIRLINE|FLIGHT_NUMBER|TAIL_NUMBER|ORIGIN_AIRPORT|DESTINATION_AIRPORT|SCHEDULED_DEPARTURE|DEPARTURE_TIME|DEPARTURE_DELAY|TAXI_OUT|WHEELS_OFF|SCHEDULED_TIME|ELAPSED_TIME|AIR_TIME|DISTANCE|WHEELS_ON|TAXI_IN|SCHEDULED_ARRIVAL|ARRIVAL_TIME|ARRIVAL_DELAY|DIVERTED|CANCELLED|CANCELLATION_REASON|AIR_SYSTEM_DELAY|SECURITY_DELAY|AIRLINE_DELAY|LATE_AIRCRAFT_DELAY|WEATHER_DELAY|IATA_CODE|        AIRPORT_NAME|     CITY|STATE|COUNTRY|LATITUDE| LONGITUDE|\n",
+      "+----+-----+---+-----------+-------+-------------+-----------+--------------+-------------------+-------------------+--------------+---------------+--------+----------+--------------+------------+--------+--------+---------+-------+-----------------+------------+-------------+--------+---------+-------------------+----------------+--------------+-------------+-------------------+-------------+---------+--------------------+---------+-----+-------+--------+----------+\n",
+      "|2015|    1|  1|          4|     AS|          136|     N431AS|           ANC|                SEA|                135|          null|           null|    null|      null|           205|        null|    null|    1448|     null|   null|              600|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1|  7|          3|     AS|           45|     N763AS|           ANC|                BET|               1905|          null|           null|    null|      null|            77|        null|    null|     399|     null|   null|             2022|        null|         null|       0|        1|                  B|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 11|          7|     AS|          144|     N535AS|           ANC|                PDX|                200|          null|           null|    null|      null|           218|        null|    null|    1542|     null|   null|              638|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 12|          1|     AS|           49|     N765AS|           ANC|                ADQ|               1530|          null|           null|    null|      null|            62|        null|    null|     253|     null|   null|             1632|        null|         null|       0|        1|                  B|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 25|          7|     AS|          106|     N767AS|           ANC|                SEA|               2140|          null|           null|    null|      null|           210|        null|    null|    1448|     null|   null|              210|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 26|          1|     AS|           82|     N577AS|           ANC|                SEA|               1750|          null|           null|    null|      null|           200|        null|    null|    1448|     null|   null|             2210|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 27|          2|     AS|           43|     N768AS|           ANC|                BET|               1110|          null|           null|    null|      null|            89|        null|    null|     399|     null|   null|             1239|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 27|          2|     AS|          102|     N627AS|           ANC|                SEA|               1910|          null|           null|    null|      null|           203|        null|    null|    1448|     null|   null|             2333|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 30|          5|     AS|          102|     N611AS|           ANC|                SEA|               1910|          null|           null|    null|      null|           203|        null|    null|    1448|     null|   null|             2333|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    1| 31|          6|     AS|           96|     N556AS|           ANC|                SEA|                940|          null|           null|    null|      null|           202|        null|    null|    1448|     null|   null|             1402|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2|  1|          7|     AS|          106|     N793AS|           ANC|                SEA|               2140|          null|           null|    null|      null|           210|        null|    null|    1448|     null|   null|              210|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2|  1|          7|     US|          497|       null|           ANC|                PHX|               2330|          null|           null|    null|      null|           330|        null|    null|    2552|     null|   null|              700|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2|  2|          1|     AS|           84|     N799AS|           ANC|                SEA|               1615|          null|           null|    null|      null|           205|        null|    null|    1448|     null|   null|             2040|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2|  5|          4|     AS|          102|     N779AS|           ANC|                SEA|               1910|          null|           null|    null|      null|           203|        null|    null|    1448|     null|   null|             2333|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 10|          2|     AS|           49|     N768AS|           ANC|                ADQ|               1530|          null|           null|    null|      null|            56|        null|    null|     253|     null|   null|             1626|        null|         null|       0|        1|                  B|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 15|          7|     AS|           49|     N713AS|           ANC|                ADQ|               1530|          1523|             -7|      10|      1533|            56|        null|    null|     253|     null|   null|             1626|        null|         null|       0|        1|                  B|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 15|          7|     AS|          102|     N625AS|           ANC|                SEA|               1910|          null|           null|    null|      null|           196|        null|    null|    1448|     null|   null|             2326|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 20|          5|     AS|          106|     N764AS|           ANC|                SEA|               2140|          null|           null|    null|      null|           202|        null|    null|    1448|     null|   null|              202|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 21|          6|     AS|          167|     N788AS|           ANC|                FAI|               2335|          null|           null|    null|      null|            58|        null|    null|     261|     null|   null|               33|        null|         null|       0|        1|                  B|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "|2015|    2| 22|          7|     AS|           49|     N788AS|           ANC|                ADQ|               1530|          null|           null|    null|      null|            56|        null|    null|     253|     null|   null|             1626|        null|         null|       0|        1|                  A|            null|          null|         null|               null|         null|      ANC|Ted Stevens Ancho...|Anchorage|   AK|    USA|61.17432|-149.99619|\n",
+      "+----+-----+---+-----------+-------+-------------+-----------+--------------+-------------------+-------------------+--------------+---------------+--------+----------+--------------+------------+--------+--------+---------+-------+-----------------+------------+-------------+--------+---------+-------------------+----------------+--------------+-------------+-------------------+-------------+---------+--------------------+---------+-----+-------+--------+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "iata_code = 'LA'\n",
-    "cancelled_flights = flightDF.select('*').where('CANCELLED = 1').where('IATA_CODE = ' iata_code)\n",
+    "iata_code = 'ANC'\n",
+    "\n",
+    "cancelled_flights = flightDF.select('*').where('CANCELLED = 1').where(flightDF.ORIGIN_AIRPORT == iata_code)\n",
+    "\n",
     "join_airline_flight = join_flights_and_airline = (\n",
-    "        cancelled_flights.join(airlineDF.withColumnRenamed('AIRLINE', 'AIRLINE_NAME')\n",
-    "                               , flightDF['AIRLINE'] == airlineDF['IATA_CODE'], 'inner')\n",
-    "    )\n"
+    "        cancelled_flights.join(airportDF.withColumnRenamed('AIRPORT', 'AIRPORT_NAME')\n",
+    "                               , flightDF['ORIGIN_AIRPORT'] == airportDF['IATA_CODE'], 'inner')\n",
+    "    )\n",
+    "\n",
+    "filter_col = list(filter(lambda x: x != 'AIRPORT_NAME' and x != 'DEPARTURE_DELAY', columns_name))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f327e21d",
+   "id": "79a2d31f",
    "metadata": {},
    "outputs": [],
    "source": []
