--- a/flight_data_analysis.ipynb
+++ b/flight_data_analysis.ipynb
@@ -498,20 +498,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "62cae996",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'columns_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26180/1983268850.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     )\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mfilter_col\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'AIRPORT_NAME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mflights_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoin_flights_and_airline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfilter_col\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'columns_name' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "124"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -519,22 +518,25 @@
     "\n",
     "cancelled_flights = flightDF.select('*').where('CANCELLED = 1').where(flightDF.ORIGIN_AIRPORT == iata_code)\n",
     "\n",
-    "join_airline_flight = join_flights_and_airline = (\n",
+    "join_airport_flight = join_flights_and_airline = (\n",
     "        cancelled_flights.join(airportDF.withColumnRenamed('AIRPORT', 'AIRPORT_NAME')\n",
     "                               , flightDF['ORIGIN_AIRPORT'] == airportDF['IATA_CODE'], 'inner')\n",
     "    )\n",
     "\n",
+    "columns_name = join_airport_flight.columns\n",
+    "\n",
     "filter_col = list(filter(lambda x: x != 'AIRPORT_NAME', columns_name))\n",
     "\n",
-    "flights_df = join_flights_and_airline.drop(*filter_col)\n",
+    "flights_df = join_airport_flight.drop(*filter_col)\n",
     "\n",
-    "flights_df.show()"
+    "\n",
+    "flights_df.count()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec1cb45",
+   "id": "7b2944ec",
    "metadata": {},
    "outputs": [],
    "source": []
