--- a/flight_data_analysis.ipynb
+++ b/flight_data_analysis.ipynb
@@ -498,19 +498,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "62cae996",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "124"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+\n",
+      "|        AIRPORT_NAME|count|\n",
+      "+--------------------+-----+\n",
+      "|Ted Stevens Ancho...|  124|\n",
+      "+--------------------+-----+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -530,13 +532,13 @@
     "flights_df = join_airport_flight.drop(*filter_col)\n",
     "\n",
     "\n",
-    "flights_df.count()\n"
+    "flights_df.groupby('AIRPORT_NAME').count().show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2944ec",
+   "id": "408032e9",
    "metadata": {},
    "outputs": [],
    "source": []
